--- a/docs/assets/static_notebooks/galaxy_denoising.ipynb
+++ b/docs/assets/static_notebooks/galaxy_denoising.ipynb
@@ -4,10 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"../docs/assets/ProxNestLogo.png\" align=\"center\" height=\"200\" width=\"300\">\n",
+    "# Sampling wavelet sparsity\n",
     "\n",
-    "# ``ProxNest`` - Solving a high-dimensional denoising inference problem \n",
-    "</center>\n",
     "Suppose we collect complete observations $y \\in \\mathbb{R}^N$ of some image $x \\in \\mathbb{R}^N$ under a trivial forward model $\\Phi = \\mathbb{I}$. Suppose further that our observational instrument introduces some aleoteric uncertainty which can be adequately modelled by a univariate Gaussian $n = \\mathcal{N}(0, \\sigma) \\in \\mathbb{R}^N$. In this case our measurement equation is given by $$y = x + n.$$\n",
     "\n",
     "Under these conditions the inverse problem of infering $x$ given $y$ is degenerate and thus breaks [Hadamards](https://en.wikipedia.org/wiki/Well-posed_problem) second condition: the solution is not unique and thus the inverse problem is ill-posed. Given that inferences of $x$ are degenerate it naturally makes more sense to consider the probability distribution of possible solutions; the posterior distribution. Here we use **proximal nested sampling** ([Cai *et al* 2022](https://arxiv.org/abs/2106.03646)), which allows us to sample from this posterior distribution, recovering both an estimate of $x$ and the plausibility of this estimate. Moreover, as this is a nested sampling algorithm we automatically recover the Bayesian evidence, which naturally allows us to carry out model comparison, through which one can *e.g.* determine which forward models $\\Phi$ are favoured by the data, or calibrate hyper-parameters of the problem such as $\\sigma$ and regularisation parameters $\\lambda$.\n",
@@ -31,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load an image and simulate some observations"
+    "### Load ground truth image"
    ]
   },
   {
@@ -54,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Construct linear operators and mock simulated observations for our stated problem"
+    "### Define problem and simulate data"
    ]
   },
   {
@@ -89,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define all necessary parameters and posteior lambda functions"
+    "### Create proximal lambda functions"
    ]
   },
   {
@@ -147,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Select a starting position $X_0$ and execute the sampling method"
+    "### Execute proximal nested sampling"
    ]
   },
   {
@@ -175,6 +173,13 @@
     "\n",
     "# Perform proximal nested sampling\n",
     "NS_BayEvi, NS_Trace = sampling.proximal_nested.ProxNestedSampling(X0, LogLikeliL, proxH, proxB, params, options)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualise posterior mean"
    ]
   },
   {
