Add radio inferometric imaging example.

--- a/docs/assets/static_notebooks/galaxy_denoising.ipynb
+++ b/docs/assets/static_notebooks/galaxy_denoising.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sampling wavelet sparsity\n",
+    "# Galaxy Image Denoising\n",
     "\n",
     "Suppose we collect complete observations $y \\in \\mathbb{R}^N$ of some image $x \\in \\mathbb{R}^N$ under a trivial forward model $\\Phi = \\mathbb{I}$. Suppose further that our observational instrument introduces some aleoteric uncertainty which can be adequately modelled by a univariate Gaussian $n = \\mathcal{N}(0, \\sigma) \\in \\mathbb{R}^N$. In this case our measurement equation is given by $$y = x + n.$$\n",
     "\n",
