debug logo in gaussian example

--- a/notebooks/gaussian_benchmark.ipynb
+++ b/notebooks/gaussian_benchmark.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"../docs/assets/ProxNestLogo.png\" align=\"center\" height=\"200\" width=\"300\">\n",
+    "<center><img src=\"https://raw.githubusercontent.com/astro-informatics/proxnest/main/docs/assets/ProxNestLogo.png\" align=\"center\" height=\"200\" width=\"300\"/>\n",
     "\n",
-    "# Gaussian Evidence benchmarking\n",
-    "</center>\n"
+    "# [`ProxNest`](https://github.com/astro-informatics/proxnest) - __Gaussian Benchmarking__ Interactive Tutorial\n",
+    "---"
    ]
   },
   {
