--- a/notebooks/gaussian_benchmark.ipynb
+++ b/notebooks/gaussian_benchmark.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define ProxNest parameters"
+    "### Define parameters"
    ]
   },
   {
