remove logo from notebooks (temp)

--- a/notebooks/galaxy_denoising.ipynb
+++ b/notebooks/galaxy_denoising.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"../docs/assets/ProxNestLogo.png\" align=\"center\" height=\"200\" width=\"300\">\n",
+    "<center>\n",
     "\n",
-    "# Solving a high-dimensional denoising inference problem \n",
-    "</center>\n",
+    "# [`ProxNest`](https://github.com/astro-informatics/proxnest) - __Denoising Example__ Interactive Tutorial\n",
+    "---\n",
     "\n",
     "Suppose we collect complete observations $y \\in \\mathbb{R}^N$ of some image $x \\in \\mathbb{R}^N$ under a trivial forward model $\\Phi = \\mathbb{I}$. Suppose further that our observational instrument introduces some aleoteric uncertainty which can be adequately modelled by a univariate Gaussian $n = \\mathcal{N}(0, \\sigma) \\in \\mathbb{R}^N$. In this case our measurement equation is given by $$y = x + n.$$\n",
     "\n",
