--- a/notebooks/galaxy_radio.ipynb
+++ b/notebooks/galaxy_radio.ipynb
@@ -4,11 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"../docs/assets/ProxNestLogo.png\" align=\"center\" height=\"200\" width=\"300\">\n",
+    "<center>\n",
     "\n",
-    "# Solving a toy radio inferometric imaging problem \n",
-    "</center>\n",
-    "\n",
+    "# [`ProxNest`](https://github.com/astro-informatics/proxnest) - __Radio Interferometry Example__ Interactive Tutorial\n",
+    "---\n",
     "Suppose we collect complete Fourier observations $y \\in \\mathbb{R}^M$ of some image $x \\in \\mathbb{R}^N$ under a forward model $\\Phi = \\mathsf{G}\\mathsf{F}$, where $M \\ll N$ and $\\mathsf{G}$ / $\\mathsf{F}$ are Fourier sub-sampling and transform respectively. Suppose further that our observational instrument introduces some aleoteric uncertainty which can be adequately modelled by a univariate Gaussian $n = \\mathcal{N}(0, \\sigma) \\in \\mathbb{R}^N$. In this case our measurement equation is given by $$y = \\Phi x + n.$$\n",
     "\n",
     "Under these conditions the inverse problem of infering $x$ given $y$ is heavily degenerate and thus breaks [Hadamards](https://en.wikipedia.org/wiki/Well-posed_problem) second condition: the solution is not unique and thus the inverse problem is ill-posed. Given that inferences of $x$ are degenerate it naturally makes more sense to consider the probability distribution of possible solutions; the posterior distribution. Here we use **proximal nested sampling** ([Cai *et al* 2022](https://arxiv.org/abs/2106.03646)), which allows us to sample from this posterior distribution, recovering both an estimate of $x$ and the plausibility of this estimate. Moreover, as this is a nested sampling algorithm we automatically recover the Bayesian evidence, which naturally allows us to carry out model comparison, through which one can *e.g.* determine which forward models $\\Phi$ are favoured by the data, or calibrate hyper-parameters of the problem such as $\\sigma$ and regularisation parameters $\\lambda$."
