--- a/notebooks/gaussian_benchmark.ipynb
+++ b/notebooks/gaussian_benchmark.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/astro-informatics/proxnest/main/docs/assets/ProxNestLogo.png\" align=\"center\" height=\"200\" width=\"300\"/>\n",
+    "<center>\n",
     "\n",
     "# [`ProxNest`](https://github.com/astro-informatics/proxnest) - __Gaussian Benchmarking__ Interactive Tutorial\n",
     "---"
