--- a/.pip_readme.rst
+++ b/.pip_readme.rst
@@ -74,7 +74,7 @@ from which one can perform *e.g.* Bayesian model comparison.
 
 Contributors
 ============
-`Xiaohao Cai <https://xiaohaocai.netlify.app>`_, `Jason McEwen <http://www.jasonmcewen.org>`_, `Marcelo Pereyra <https://www.macs.hw.ac.uk/~mp71/about.html>`_, `Matthew Price <https://cosmomatt.github.io>`_, and contributors.
+`Matthew Price <https://cosmomatt.github.io>`_, `Xiaohao Cai <https://xiaohaocai.netlify.app>`_, `Jason McEwen <http://www.jasonmcewen.org>`_, `Marcelo Pereyra <https://www.macs.hw.ac.uk/~mp71/about.html>`_, and contributors.
 
 Attribution
 ===========
@@ -99,7 +99,7 @@ the non-commercial use condition (see `LICENSE_EXT.txt <https://github.com/astro
 .. code-block::
 
      ProxNest
-     Copyright (C) 2022 Xiaohao Cai, Jason McEwen, Marcelo Pereyra, Matthew Price & contributors
+     Copyright (C) 2022 Matthew Price, Xiaohao Cai, Jason McEwen, Marcelo Pereyra & contributors
 
      This program is released under the GPL-3 license (see LICENSE.txt), 
      subject to a non-commercial use condition (see LICENSE_EXT.txt).
