fix save path bug

--- a/debug/notebooks/WAV_DnCNN_galaxy_radio.ipynb
+++ b/debug/notebooks/WAV_DnCNN_galaxy_radio.ipynb
@@ -20,6 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "# Set GPU ID\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"2\"\n",
+    "\n",
     "import numpy as np\n",
     "import ProxNest as pxn\n",
     "import ProxNest.utils as utils\n",
@@ -29,13 +34,12 @@
     "\n",
     "from skimage.metrics import peak_signal_noise_ratio as psnr\n",
     "from skimage.metrics import structural_similarity as ssim\n",
+    "\n",
     "from matplotlib import pyplot as plt\n",
     "plt.style.use('dark_background')\n",
     "plt.rcParams[\"font.family\"] = \"serif\"\n",
     "\n",
-    "import os\n",
-    "# Set GPU ID\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"2\"\n"
+    "\n"
    ]
   },
   {
@@ -79,7 +83,7 @@
     "np.random.seed(0)\n",
     "\n",
     "# A mock radio imaging forward model with half of the Fourier coefficients masked\n",
-    "phi = operators.sensing_operators.MaskedFourier(dim, 0.5)\n",
+    "phi = operators.sensing_operators.MaskedFourier(dim, 0.3)\n",
     "\n",
     "# A wavelet dictionary in which we can promote sparsity\n",
     "psi = operators.wavelet_operators.db_wavelets([\"db6\"], 2, (dim, dim))"
@@ -126,25 +130,13 @@
     }
    ],
    "source": [
-    "# Define sampling parameters\n",
-    "L_likelihood = 1 / sigma**2\n",
-    "# Define MY lambda parameter\n",
-    "# lmbd = 1 / L_likelihood\n",
-    "lamb = 1. / L_likelihood\n",
-    "# Compute MY envelope Lipschitz param\n",
-    "L_g = 1 / lamb\n",
-    "# Total Lipschitz\n",
-    "L = L_g + L_likelihood\n",
-    "# Define sampling's step size\n",
-    "frac_delta = 1e-2\n",
-    "delta_step = frac_delta / L\n",
+    "alpha = 1.\n",
+    "varepsilon = sigma**2\n",
+    "L = 1.\n",
+    "L_y = 0.\n",
     "\n",
-    "gamma = sigma**2\n",
-    "\n",
-    "print(L_likelihood)\n",
-    "print(lamb)\n",
-    "print(gamma)\n",
-    "print(delta_step)\n"
+    "lamb = 0.1 * 0.5 * (1/(2 * L_y + alpha * L / varepsilon ))\n",
+    "delta = 0.1 * (1/3) * (1/ (L_y + 1/lamb + alpha * L / varepsilon))\n"
    ]
   },
   {
@@ -153,14 +145,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print('varepsilon: ', varepsilon)\n",
+    "print('lamb: ', lamb)\n",
+    "print('delta: ', delta)\n",
     "\n",
-    "delta_step_DnCNN = .01 * sigma**2\n",
-    "gamma_DnCNN = sigma**2\n",
-    "lamb_DnCNN = sigma**2\n",
     "\n",
-    "delta_step_WAV = 1e-8\n",
-    "lamb_WAV = 5. * delta_step_WAV\n",
-    "gamma_WAV = 5. * delta_step_WAV\n"
+    "# Translate variables\n",
+    "delta_step_DnCNN = delta\n",
+    "lamb_DnCNN = lamb\n",
+    "gamma_DnCNN = varepsilon\n",
+    "\n"
    ]
   },
   {
@@ -168,7 +162,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "delta_step_WAV = 1e-8\n",
+    "lamb_WAV = 5. * delta_step_WAV\n",
+    "gamma_WAV = 5. * delta_step_WAV\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -207,54 +205,26 @@
     "\n",
     "# Options dictionary associated with the overall sampling algorithm\n",
     "options_DnCNN = utils.create_options_dict(\n",
-    "    samplesL = 1e2,                  # Number of live samples\n",
-    "    samplesD = 1e3,                  # Number of discarded samples \n",
-    "    thinning = 1e1,                  # Thinning factor (to mitigate correlations)\n",
+    "    samplesL = 2e3,                  # Number of live samples\n",
+    "    samplesD = 4e4,                  # Number of discarded samples \n",
+    "    thinning = 1e2,                  # Thinning factor (to mitigate correlations)\n",
     "       delta = delta_step_DnCNN, #1e-8,    # Discretisation stepsize\n",
     "       lamb = lamb_DnCNN,\n",
-    "        burn = 1e1,                  # Number of burn in samples\n",
+    "        burn = 1e3,                  # Number of burn in samples\n",
     "       sigma = sigma,                # Noise standard deviation of degraded image\n",
     "       gamma = gamma_DnCNN,             # Gamma parameter of the prior term. Using noise variance\n",
     ")\n",
     "\n",
     "options_WAV = utils.create_options_dict(\n",
-    "    samplesL = 1e2,                  # Number of live samples\n",
-    "    samplesD = 1e3,                  # Number of discarded samples \n",
-    "    thinning = 1e1,                  # Thinning factor (to mitigate correlations)\n",
+    "    samplesL = 2e3,                  # Number of live samples\n",
+    "    samplesD = 4e4,                  # Number of discarded samples \n",
+    "    thinning = 1e2,                  # Thinning factor (to mitigate correlations)\n",
     "       delta = delta_step_WAV, #1e-8,    # Discretisation stepsize\n",
     "       lamb = lamb_WAV,\n",
-    "        burn = 1e1,                  # Number of burn in samples\n",
+    "        burn = 1e3,                  # Number of burn in samples\n",
     "       sigma = sigma,                # Noise standard deviation of degraded image\n",
     "       gamma = gamma_WAV,             # Gamma parameter of the prior term. Using noise variance\n",
     ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Define sampling parameters\n",
-    "# L_likelihood = 1. / sigma ** 2\n",
-    "# # Define MY lambda parameter\n",
-    "# lmbd = 1 / L_likelihood\n",
-    "# # Compute MY envelope Lipschitz param\n",
-    "# L_g = 1 / lmbd\n",
-    "# # Total Lipschitz\n",
-    "# L = L_g + L_likelihood\n",
-    "# # Define sampling's step size\n",
-    "# delta = 0.98 / L\n",
-    "# delta"
    ]
   },
   {
@@ -322,6 +292,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_fig_dir = '/disk/xray0/tl3/repos/proxnest/debug/figs/'\n",
+    "save_var_dir = '/disk/xray0/tl3/repos/proxnest/debug/saved_vars/'\n",
+    "\n",
+    "save_prefix_WAV = 'radio_WAV_delta_{:.1e}_lamb_{:.1e}_gamma_{:.1e}'.format(\n",
+    "    delta_step_WAV, lamb_WAV, gamma_WAV\n",
+    ")\n",
+    "\n",
+    "save_prefix_DnCNN = 'radio_DnCNN_delta_{:.1e}_lamb_{:.1e}_gamma_{:.1e}'.format(\n",
+    "    delta_step_DnCNN, lamb_DnCNN, gamma_DnCNN\n",
+    ")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DnCNN model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ProxNest || Initialise: 100%|██████████| 200/200 [00:09<00:00, 20.13it/s]\n",
+      "ProxNest || Populate: 100%|██████████| 1008/1008 [00:01<00:00, 622.37it/s]\n",
+      "ProxNest || Sample: 100%|██████████| 1000/1000 [00:45<00:00, 22.03it/s]\n",
+      "ProxNest || Compute Weights: 100%|██████████| 1000/1000 [00:00<00:00, 714532.20it/s]\n",
+      "ProxNest || Trapezium Integrate: 100%|██████████| 998/998 [00:00<00:00, 1472876.63it/s]\n",
+      "ProxNest || Estimate Variance: 100%|██████████| 1000/1000 [00:00<00:00, 325745.88it/s]\n",
+      "ProxNest || Compute Posterior Mean: 100%|██████████| 1000/1000 [00:00<00:00, 350547.76it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Perform proximal nested sampling\n",
+    "NS_BayEvi_DnCNN, NS_Trace_DnCNN = sampling.proximal_nested.ProxNestedSampling(\n",
+    "    np.copy(X0), LogLikeliL, proxH_DnCNN, proxB_DnCNN, params_DnCNN, options_DnCNN\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(NS_BayEvi_DnCNN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DnCNN\n",
+    "\n",
+    "images = [ground_truth, X0, NS_Trace_DnCNN['DiscardPostMean']]\n",
+    "labels = [\"Truth\", \"Dirty\", \"Posterior mean\"]\n",
+    "\n",
+    "fig, axs = plt.subplots(1,3, figsize=(20,8), dpi=400)\n",
+    "for i in range(3):\n",
+    "    axs[i].imshow(images[i], cmap='afmhot', vmax=np.nanmax(images), vmin=np.nanmin(images))\n",
+    "    if i > 0:   \n",
+    "        stats_str = ' (PSNR: {}, SSIM: {})'.format(\n",
+    "            round(psnr(ground_truth, images[i], data_range=ground_truth.max()-ground_truth.min()), 2),\n",
+    "            round(ssim(ground_truth, images[i], data_range=ground_truth.max()-ground_truth.min()), 2)\n",
+    "            )\n",
+    "        labels[i] += stats_str\n",
+    "    axs[i].set_title(labels[i], fontsize=16)\n",
+    "    axs[i].axis('off')\n",
+    "\n",
+    "plt.savefig('{:s}{:s}_reconstruction_plot.pdf'.format(save_fig_dir, save_prefix_DnCNN))\n",
+    "plt.show()\n",
+    "\n",
+    "dirty_DnCNN_SNR = psnr(ground_truth, X0, data_range=ground_truth.max()-ground_truth.min())\n",
+    "post_mean_DnCNN_SNR = psnr(ground_truth, NS_Trace_DnCNN['DiscardPostMean'], data_range=ground_truth.max()-ground_truth.min())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dict_DnCNN = {\n",
+    "    'ground_truth': ground_truth,\n",
+    "    'X0': X0,\n",
+    "    'dirty_SNR': dirty_DnCNN_SNR,\n",
+    "    'post_mean_SNR': post_mean_DnCNN_SNR,\n",
+    "    'NS_BayEvi': NS_BayEvi_DnCNN,\n",
+    "    'NS_Trace': NS_Trace_DnCNN,\n",
+    "    'options': options_DnCNN,\n",
+    "}\n",
+    "\n",
+    "try:\n",
+    "    np.save('{:s}{:s}_saved_vars.pdf'.format(save_var_dir, save_prefix_DnCNN), save_dict_DnCNN, allow_pickle=True)\n",
+    "except Exception as e:\n",
+    "    print('cannot save variables')\n",
+    "    print(e)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# WAV model"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -357,33 +450,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ProxNest || Initialise: 100%|██████████| 200/200 [00:09<00:00, 20.13it/s]\n",
-      "ProxNest || Populate: 100%|██████████| 1008/1008 [00:01<00:00, 622.37it/s]\n",
-      "ProxNest || Sample: 100%|██████████| 1000/1000 [00:45<00:00, 22.03it/s]\n",
-      "ProxNest || Compute Weights: 100%|██████████| 1000/1000 [00:00<00:00, 714532.20it/s]\n",
-      "ProxNest || Trapezium Integrate: 100%|██████████| 998/998 [00:00<00:00, 1472876.63it/s]\n",
-      "ProxNest || Estimate Variance: 100%|██████████| 1000/1000 [00:00<00:00, 325745.88it/s]\n",
-      "ProxNest || Compute Posterior Mean: 100%|██████████| 1000/1000 [00:00<00:00, 350547.76it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Perform proximal nested sampling\n",
-    "NS_BayEvi_DnCNN, NS_Trace_DnCNN = sampling.proximal_nested.ProxNestedSampling(\n",
-    "    np.copy(X0), LogLikeliL, proxH_DnCNN, proxB_DnCNN, params_DnCNN, options_DnCNN\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -397,9 +463,7 @@
     }
    ],
    "source": [
-    "\n",
-    "print(NS_BayEvi_WAV)\n",
-    "print(NS_BayEvi_DnCNN)\n"
+    "print(NS_BayEvi_WAV)\n"
    ]
   },
   {
@@ -436,9 +500,14 @@
     "    axs[i].set_title(labels[i], fontsize=16)\n",
     "    axs[i].axis('off')\n",
     "\n",
+    "\n",
+    "plt.savefig('{:s}{:s}_reconstruction_plot.pdf'.format(save_fig_dir, save_prefix_WAV))\n",
     "plt.show()\n",
-    "# 27.42 -> 1e5\n",
-    "# 18.24 -> 5e5"
+    "# plt.close()\n",
+    "\n",
+    "dirty_WAV_SNR = psnr(ground_truth, X0, data_range=ground_truth.max()-ground_truth.min())\n",
+    "post_mean_WAV_SNR = psnr(ground_truth, NS_Trace_WAV['DiscardPostMean'], data_range=ground_truth.max()-ground_truth.min())\n",
+    "\n"
    ]
   },
   {
@@ -459,25 +528,22 @@
    ],
    "source": [
     "\n",
-    "# DnCNN\n",
+    "save_dict_WAV = {\n",
+    "    'ground_truth': ground_truth,\n",
+    "    'X0': X0,\n",
+    "    'dirty_SNR': dirty_WAV_SNR,\n",
+    "    'post_mean_SNR': post_mean_WAV_SNR,\n",
+    "    'NS_BayEvi': NS_BayEvi_WAV,\n",
+    "    'NS_Trace': NS_Trace_WAV,\n",
+    "    'options': options_WAV,\n",
+    "}\n",
     "\n",
-    "images = [ground_truth, X0, NS_Trace_DnCNN['DiscardPostMean']]\n",
-    "labels = [\"Truth\", \"Dirty\", \"Posterior mean\"]\n",
-    "\n",
-    "fig, axs = plt.subplots(1,3, figsize=(20,8), dpi=400)\n",
-    "for i in range(3):\n",
-    "    im = axs[i].imshow(images[i], cmap='afmhot', vmax=np.nanmax(images), vmin=np.nanmin(images))\n",
-    "    if i > 0:   \n",
-    "        stats_str = ' (PSNR: {}, SSIM: {})'.format(\n",
-    "            round(psnr(ground_truth, images[i], data_range=ground_truth.max()-ground_truth.min()), 2),\n",
-    "            round(ssim(ground_truth, images[i], data_range=ground_truth.max()-ground_truth.min()), 2)\n",
-    "            )\n",
-    "        labels[i] += stats_str\n",
-    "    axs[i].set_title(labels[i], fontsize=16)\n",
-    "    axs[i].axis('off')\n",
-    "    # plt.colorbar(img=im)\n",
-    "\n",
-    "plt.show()\n"
+    "try:\n",
+    "    np.save('{:s}{:s}_saved_vars.pdf'.format(save_var_dir, save_prefix_WAV), save_dict_WAV, allow_pickle=True)\n",
+    "except Exception as e:\n",
+    "    print('cannot save variables')\n",
+    "    print(e)\n",
+    "\n"
    ]
   },
   {
@@ -485,7 +551,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "old_stdout = sys.stdout\n",
+    "log_file = open('{:s}{:s}_log.log'.format(save_var_dir, save_prefix_WAV), 'w')\n",
+    "sys.stdout = log_file\n",
+    "print('Starting the log file.\\n')\n",
+    "\n",
+    "\n",
+    "print('NS_BayEvi_DnCNN: ', NS_BayEvi_DnCNN)\n",
+    "print('NS_BayEvi_WAV: ', NS_BayEvi_WAV)\n",
+    "\n",
+    "print('dirty_DnCNN_SNR: ', dirty_DnCNN_SNR)\n",
+    "print('post_mean_DnCNN_SNR: ', post_mean_DnCNN_SNR)\n",
+    "\n",
+    "print('dirty_WAV_SNR: ', dirty_WAV_SNR)\n",
+    "print('post_mean_WAV_SNR: ', post_mean_WAV_SNR)\n",
+    "\n",
+    "\n",
+    "## Close log file\n",
+    "print('\\n Good bye..')\n",
+    "sys.stdout = old_stdout\n",
+    "log_file.close()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
