solve bug in save path

--- a/debug/notebooks/WAV_DnCNN_galaxy_denoising.ipynb
+++ b/debug/notebooks/WAV_DnCNN_galaxy_denoising.ipynb
@@ -336,11 +336,11 @@
     "save_fig_dir = '/disk/xray0/tl3/repos/proxnest/debug/figs/'\n",
     "save_var_dir = '/disk/xray0/tl3/repos/proxnest/debug/saved_vars/'\n",
     "\n",
-    "save_prefix_WAV = '{:s}denoising_WAV_delta_{:.1e}_lamb_{:.1e}_gamma_{:.1e}'.format(\n",
+    "save_prefix_WAV = 'denoising_WAV_delta_{:.1e}_lamb_{:.1e}_gamma_{:.1e}'.format(\n",
     "    delta_step_WAV, lamb_WAV, gamma_WAV\n",
     ")\n",
     "\n",
-    "save_prefix_DnCNN = '{:s}denoising_DnCNN_delta_{:.1e}_lamb_{:.1e}_gamma_{:.1e}'.format(\n",
+    "save_prefix_DnCNN = 'denoising_DnCNN_delta_{:.1e}_lamb_{:.1e}_gamma_{:.1e}'.format(\n",
     "    delta_step_DnCNN, lamb_DnCNN, gamma_DnCNN\n",
     ")\n"
    ]
